fixed nav font size on mobile view

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ main {
   text-align: left;
   color: #121212;
   font-size: 5.2vw;
-  font-family: "Raleway", sans-serif;
+  font-family: "Raleway", sans-serif;F
   cursor: default;
 }
 
@@ -380,6 +380,10 @@ main {
     min-height: 100% !important;
     margin: auto;
   }
+  #nav{
+    font-size: 4vw;
+  }
+  
 }
 
 @media screen and (max-width: 400px) {
